data/derived/fa15/progs/unify/prog3575.ml.out
Characters 49-54:
  else x::x clone x n-1;;
            ^^^^^
Error: This expression has type
         ('a -> 'b -> 'c -> 'd) -> int -> ('a -> 'b -> 'c -> 'd) list
       but an expression was expected of type 'a
       The type variable 'a occurs inside
       ('a -> 'b -> 'c -> 'd) -> int -> ('a -> 'b -> 'c -> 'd) list
